Fixed metrics failed issue

--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,12 @@
   	<dependency>
   		<groupId>org.bukkit</groupId>
   		<artifactId>bukkit</artifactId>
-  		<version>1.6.4-R1.0</version>
+  		<version>1.7.10-R0.1-SNAPSHOT</version>
   	</dependency>
   	<dependency>
   		<groupId>org.dynmap</groupId>
   		<artifactId>dynmap-api</artifactId>
-  		<version>1.9</version>
+        <version>1.9</version>
   	</dependency>
   </dependencies>
   <properties>
